# boltz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  analyze_and_plot.py  boltz2_verification.py  boltz_profiler.py  boltz_training_profiler.py  capture_pairformer_stats.py  fp8_pairformer_simulation.py  generate_example_yamls.py  make_focused_plots.py  multi_protein_analysis.py  profile_pairformer.py  pyproject.toml  run_diverse_inputs.sh  test_long_sequences.py
docs/: boltz2_cp_prediction.md  boltz2_cp_training.md
examples/: antibody.yaml  homodimer.yaml  large_complex.yaml  protein_large.yaml  protein_ligand.yaml  protein_medium.yaml
licenses/: LICENSE  third-party-attr.txt
pre-commit/: .secrets.baseline  license_check.py
scripts/eval/: run_evals.py
scripts/process/: cluster.py
scripts/train/: download_data.sh  fp8_diagnostics.py  train.py
scripts/train/configs/: structure.yaml  structurev2.yaml  structurev2_cp.yaml  structurev2_small.yaml  structurev2_small_cp.yaml
src/boltz/: main.py
src/boltz/data/: types.py
src/boltz/distributed/: README.md  comm.py  lightning_strategy.py  main.py  manager.py  predict.py  train.py  utils.py
src/boltz/testing/: utils.py
src/boltz/workflow/: utils.py
tests/: conftest.py
tests/data/feature/: test_featurizerv2.py  test_featurizerv2_train.py
tests/data/write/: test_writer.py
tests/distributed/: dtensor_train_harness.py  test_dtensor_boltz2_train.py  test_dtensor_cp_dataloader_v2.py  test_dtensor_layernorm.py  test_dtensor_linear.py  test_dtensor_metadata_tools.py  test_dtensor_parallel_assert_factored_lddt_loss.py  test_dtensor_predict.py  test_dtensor_stop_and_go.py  test_dtensor_train_utils.py  test_layoutmap.py  test_lightning_strategy.py  test_manager.py  test_tiled_softmax_attn_update.py  test_utils.py
tests/distributed/data/: test_dtensor_minimum_lddt_symmetry_coords.py  test_dtensor_pack_and_pad_atom_features.py  test_dtensor_scatter_features.py
tests/model/layers/: test_outer_product_mean.py  test_triangle_attention.py  test_triattn_kernel.py
tests/model/loss/: test_cdist_lddt_validation.py  test_distogramv2.py  (+1 more)
tests/scripts/: test_cluster.py  test_run_evals.py
tests/workflow/: test_workflow_utils.py
(+190 files in other folders)
